--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -76,8 +76,9 @@
   		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-analyzers</artifactId>
-			<version>2.9.1</version>
-		</dependency>
+              <!-- <version>2.9.1</version> -->
+              <version>3.6.0</version>
+          </dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -104,16 +105,28 @@
             </exclusions>
         </dependency>
 
-        <dependency>
+       <dependency>
             <groupId>org.apache.mahout</groupId>
             <artifactId>mahout-core</artifactId>
             <version>0.8-SNAPSHOT</version>
         </dependency>
 
         <dependency>
+            <groupId>org.apache.mahout</groupId>
+            <artifactId>mahout-examples</artifactId>
+            <version>0.8-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
-            <version>2.7.3</version>
+            <version>2.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>bson</artifactId>
+            <version>2.5</version>
         </dependency>
 
         <!-- Test dependencies -->
@@ -162,7 +175,8 @@
 			<dependency>
 				<groupId>org.apache.lucene</groupId>
 				<artifactId>lucene-core</artifactId>
-				<version>2.9.1</version>
+				<!-- <version>2.9.1</version> -->
+                <version>3.6.0</version>
 			</dependency>
 			
 		</dependencies>
