--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,7 @@
 	</scm>
 	<packaging>jar</packaging>
 	<!-- Must be kept in sync with "version" value in build.properties -->
-    <!-- <version>1.0-SNAPSHOT</version> -->
-     <version>0.7.1</version>
+    <version>1.0-SNAPSHOT</version>
 
      <repositories>
          <repository>
