--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,19 @@
 			<name>Cascading repository</name>
 			<url>http://conjars.org/repo</url>
 		</repository>
+		
+		<repository>
+          <id>sonatype-staging-repos</id>
+          <url>https://oss.sonatype.org/content/repositories/comgooglecodecrawler-commons-712/</url>
+          <name>Sonatype Staging</name>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+        </repository>
+		
 	</repositories>
 	
 	<dependencies>
@@ -83,7 +96,13 @@
 		<dependency>
 			<groupId>org.apache.tika</groupId>
 			<artifactId>tika-parsers</artifactId>
-			<version>1.2</version>
+			<version>1.3</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>com.google.code.crawler-commons</groupId>
+			<artifactId>crawler-commons</artifactId>
+			<version>0.3-SNAPSHOT</version>
 		</dependency>
 	
 		<dependency>
