--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -32,7 +32,6 @@
 	</repositories>
 	
 	<properties>
-		<cascading.version>2.1.6</cascading.version>
         <hadoop.version>1.0.4</hadoop.version>
         <jetty.version>8.1.8.v20121106</jetty.version>
 	</properties>
@@ -56,18 +55,6 @@
             <version>1.8.0.7</version>
         </dependency>
 
-		<dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-core</artifactId>
-            <version>${hadoop.version}</version>
-		<scope>provided</scope>
-		<exclusions>
-			<exclusion>
-				<groupId>ant</groupId>
-				<artifactId>ant</artifactId>
-			</exclusion>
-		</exclusions>
-		</dependency>
 	
 		<dependency>
             <groupId>org.apache.lucene</groupId>
@@ -100,6 +87,43 @@
 				</exclusion>
             </exclusions>
         </dependency>
+
+		<!-- Provided dependencies -->
+
+		<dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-core</artifactId>
+            <version>1.0.4</version>
+		    <scope>provided</scope>
+		    
+		    <exclusions>
+		    	<exclusion>
+		    		<groupId>org.mortbay.jetty</groupId>
+		    		<artifactId>jetty</artifactId>
+		    	</exclusion>
+		    	<exclusion>
+		    		<groupId>org.mortbay.jetty</groupId>
+		    		<artifactId>jetty-util</artifactId>
+		    	</exclusion>
+		    	<exclusion>
+		    		<groupId>org.mortbay.jetty</groupId>
+		    		<artifactId>servlet-api</artifactId>
+		    	</exclusion>
+				<exclusion>
+					<groupId>org.mortbay.jetty</groupId>
+					<artifactId>servlet-api-2.5</artifactId>
+				</exclusion>
+		    	<exclusion>
+		    		<groupId>org.apache.tomcat</groupId>
+		    		<artifactId>servlet-api</artifactId>
+		    	</exclusion>
+		    	
+		    	<exclusion>
+		    		<artifactId>ant</artifactId>
+		    		<groupId>ant</groupId>
+		    	</exclusion>
+		    </exclusions>
+		</dependency>
 
 		<!-- Test dependencies -->
 
