--- a/contrib/helpful/pom.xml
+++ b/contrib/helpful/pom.xml
@@ -26,28 +26,55 @@
 	<version>1.0-SNAPSHOT</version>
 	<repositories>
 		<repository>
-			<id>Bixo</id>
-			<name>Bixo GitHub repository</name>
-			<url>http://bixo.github.com/repo/</url>
-		</repository>
-		<repository>
 			<id>Conjars</id>
 			<url>http://conjars.org/repo</url>
 		</repository>
 	</repositories>
 	
+	<properties>
+        <hadoop.version>1.0.4</hadoop.version>
+	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>bixo</groupId>
 			<artifactId>bixo-core</artifactId>
-			<version>0.8.0</version>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		
 		<dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-core</artifactId>
-            <version>0.20.2</version>
-		<scope>provided</scope>
+            <version>1.0.4</version>
+		    <scope>provided</scope>
+		    
+		    <exclusions>
+		    	<exclusion>
+		    		<groupId>org.mortbay.jetty</groupId>
+		    		<artifactId>jetty</artifactId>
+		    	</exclusion>
+		    	<exclusion>
+		    		<groupId>org.mortbay.jetty</groupId>
+		    		<artifactId>jetty-util</artifactId>
+		    	</exclusion>
+		    	<exclusion>
+		    		<groupId>org.mortbay.jetty</groupId>
+		    		<artifactId>servlet-api</artifactId>
+		    	</exclusion>
+				<exclusion>
+					<groupId>org.mortbay.jetty</groupId>
+					<artifactId>servlet-api-2.5</artifactId>
+				</exclusion>
+		    	<exclusion>
+		    		<groupId>org.apache.tomcat</groupId>
+		    		<artifactId>servlet-api</artifactId>
+		    	</exclusion>
+		    	
+		    	<exclusion>
+		    		<artifactId>ant</artifactId>
+		    		<groupId>ant</groupId>
+		    	</exclusion>
+		    </exclusions>
 		</dependency>
 	
 		<!-- Test dependencies -->
@@ -69,7 +96,7 @@
 		<dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-test</artifactId>
-            <version>0.20.2</version>
+            <version>${hadoop.version}</version>
             <scope>test</scope>
         </dependency>
 
