Comment out JDBCCrawlTool and related files until we get a version of cascading-jdbc that works with Cascading 2.x

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -43,11 +43,12 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		
-		<dependency>
-            <groupId>cascading</groupId>
-            <artifactId>cascading-11-jdbc</artifactId>
-            <version>0.0.4</version>
-        </dependency>
+		<!-- cascading-11-jdbc is based on Cascading 1.x and needs to be updated -->
+<!-- 		<dependency> -->
+<!--             <groupId>cascading</groupId> -->
+<!--             <artifactId>cascading-11-jdbc</artifactId> -->
+<!--             <version>0.0.4</version> -->
+<!--         </dependency> -->
 
 		<dependency>
             <groupId>hsqldb</groupId>
