--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,6 @@
             <groupId>cascading</groupId>
             <artifactId>cascading-local</artifactId>
             <version>${cascading.version}</version>
-            <!-- This can't be test scope, due to BasePlatform using local APIs -->
         </dependency>
  
        <dependency>
@@ -97,19 +96,19 @@
 		<dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
-            <version>4.1</version>
+            <version>4.2.4</version>
         </dependency>
         
 		<dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.1.1</version>
+            <version>4.2.5</version>
         </dependency>
         
 		<dependency>
 			<groupId>org.apache.tika</groupId>
 			<artifactId>tika-parsers</artifactId>
-			<version>1.2</version>
+			<version>1.3</version>
 		</dependency>
 	
 		<dependency>
@@ -169,7 +168,7 @@
 		<dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-test</artifactId>
-            <version>1.0.4</version>
+            <version>${hadoop.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -187,28 +186,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- These two jars could be a runtime dependency of hadoop-core,
-             but it doesn't seem to work for running unit tests that use
-             Hadoop.
-          -->
-		<dependency>
-            <groupId>org.apache.tomcat</groupId>
-            <artifactId>jasper</artifactId>
-            <version>6.0.20</version>
-            <scope>test</scope>
-            <exclusions>
-				<exclusion>
-					<groupId>org.mortbay.jetty</groupId>
-					<artifactId>servlet-api-2.5</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.apache.tomcat</groupId>
-					<artifactId>servlet-api</artifactId>
-				</exclusion>
-            </exclusions>
-            
-        </dependency>
- 		
 		<dependency>
             <groupId>it.unimi</groupId>
             <artifactId>dsiutils</artifactId>
