--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -60,13 +60,13 @@
 		<dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
-			<version>3.6.2</version>
+			<version>4.2.1</version>
         </dependency>
   
   		<dependency>
 			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-analyzers</artifactId>
-			<version>3.6.2</version>
+			<artifactId>lucene-analyzers-common</artifactId>
+			<version>4.2.1</version>
 		</dependency>
 
 
