--- a/examples/build.properties
+++ b/examples/build.properties
@@ -22,7 +22,7 @@
  */
  
 name=bixo-examples
-version=1.0-SNAPSHOT
+version=0.9.0
 
 jar.name=${ant.project.name}-${version}.jar
 job.name=${ant.project.name}-job-${version}.jar
