--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 	</scm>
 	<packaging>jar</packaging>
 	<!-- Must be kept in sync with "version" value in build.properties -->
-	<version>1.0-SNAPSHOT</version>
+	<version>0.9.0</version>
 	
 	<repositories>
 		<repository>
