--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
        <dependency>
            <groupId>com.scaleunlimited</groupId>
            <artifactId>cascading.utils</artifactId>
-           <version>2.1.4</version>
+           <version>2.2-SNAPSHOT</version>
        </dependency>
         
 		<dependency>
@@ -112,12 +112,6 @@
 		</dependency>
 	
 		<dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.14</version>
-        </dependency>
-
-		<dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.4</version>
@@ -135,12 +129,6 @@
             <version>2.0.18</version>
         </dependency>
 
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-            <version>1.6.1</version>
-		</dependency>
-
 		<!-- Test dependencies -->
 
         <dependency>
@@ -148,6 +136,13 @@
             <artifactId>cascading-core</artifactId>
             <version>${cascading.version}</version>
             <classifier>tests</classifier>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.2</version>
             <scope>test</scope>
         </dependency>
 
