--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
        <dependency>
            <groupId>com.scaleunlimited</groupId>
            <artifactId>cascading.utils</artifactId>
-           <version>2.2-SNAPSHOT</version>
+           <version>2.1.5</version>
        </dependency>
         
 		<dependency>
