--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 	<packaging>jar</packaging>
 	<!-- Must be kept in sync with "version" value in build.properties -->
 	<version>1.0-SNAPSHOT</version>
-	
+
 	<repositories>
 		<repository>
 			<id>Bixo</id>
@@ -52,223 +52,310 @@
 			<url>http://conjars.org/repo</url>
 		</repository>
 	</repositories>
-	
+
 	<properties>
-		<cascading.version>2.2.0-wip-66</cascading.version>
-        <hadoop.version>1.0.4</hadoop.version>
-        <jetty.version>8.1.8.v20121106</jetty.version>
+		<cascading.version>2.2.0</cascading.version>
+		<tika.version>1.4</tika.version>
+		<hadoop.version>1.0.4</hadoop.version>
+		<jetty.version>8.1.8.v20121106</jetty.version>
 	</properties>
-	
+
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>cascading</groupId>
+				<artifactId>cascading-core</artifactId>
+				<version>${cascading.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>cascading</groupId>
+				<artifactId>cascading-hadoop</artifactId>
+				<version>${cascading.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+
+			<dependency>
+				<groupId>cascading</groupId>
+				<artifactId>cascading-local</artifactId>
+				<version>${cascading.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.tika</groupId>
+				<artifactId>tika-parsers</artifactId>
+				<version>${tika.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>commons-lang</groupId>
+				<artifactId>commons-lang</artifactId>
+				<version>2.4</version>
+			</dependency>
+
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>2.1</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpcore</artifactId>
+				<version>4.2.4</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>4.2.5</version>
+			</dependency>
+
+			<!-- Test dependecies -->
+			<dependency>
+				<groupId>cascading</groupId>
+				<artifactId>cascading-core</artifactId>
+				<version>${cascading.version}</version>
+				<classifier>tests</classifier>
+			</dependency>
+
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-log4j12</artifactId>
+				<version>1.7.2</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.hadoop</groupId>
+				<artifactId>hadoop-test</artifactId>
+				<version>${hadoop.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-server</artifactId>
+				<version>${jetty.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-servlet</artifactId>
+				<version>${jetty.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>jaxen</groupId>
+				<artifactId>jaxen</artifactId>
+				<version>1.1.1</version>
+				<exclusions>
+					<exclusion>
+						<groupId>xerces</groupId>
+						<artifactId>xercesImpl</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+
+			<!-- Provided dependecies -->
+
+			<dependency>
+				<groupId>org.apache.hadoop</groupId>
+				<artifactId>hadoop-core</artifactId>
+				<version>${hadoop.version}</version>
+
+				<exclusions>
+					<exclusion>
+						<groupId>org.mortbay.jetty</groupId>
+						<artifactId>jetty</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.mortbay.jetty</groupId>
+						<artifactId>jetty-util</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.mortbay.jetty</groupId>
+						<artifactId>servlet-api</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.mortbay.jetty</groupId>
+						<artifactId>servlet-api-2.5</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.apache.tomcat</groupId>
+						<artifactId>servlet-api</artifactId>
+					</exclusion>
+
+					<exclusion>
+						<artifactId>ant</artifactId>
+						<groupId>ant</groupId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+
+		</dependencies>
+	</dependencyManagement>
+
+
 	<dependencies>
 
 		<!-- Compile time dependencies -->
-		
+
 		<dependency>
-            <groupId>cascading</groupId>
-            <artifactId>cascading-core</artifactId>
-            <version>${cascading.version}</version>
-        </dependency>
-        
-         <dependency>
-            <groupId>cascading</groupId>
-            <artifactId>cascading-hadoop</artifactId>
-            <version>${cascading.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
- 
-         <dependency>
-            <groupId>cascading</groupId>
-            <artifactId>cascading-local</artifactId>
-            <version>${cascading.version}</version>
-        </dependency>
- 
-       <dependency>
-           <groupId>com.scaleunlimited</groupId>
-           <artifactId>cascading.utils</artifactId>
-           <version>2.1.5</version>
-       </dependency>
-        
+			<groupId>cascading</groupId>
+			<artifactId>cascading-core</artifactId>
+		</dependency>
+
 		<dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpcore</artifactId>
-            <version>4.2.4</version>
-        </dependency>
-        
+			<groupId>cascading</groupId>
+			<artifactId>cascading-hadoop</artifactId>
+		</dependency>
+
 		<dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.2.5</version>
-        </dependency>
-        
+			<groupId>cascading</groupId>
+			<artifactId>cascading-local</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.scaleunlimited</groupId>
+			<artifactId>cascading.utils</artifactId>
+			<version>2.1.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.apache.tika</groupId>
 			<artifactId>tika-parsers</artifactId>
-			<version>1.4</version>
 		</dependency>
-	
-		<dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.4</version>
-        </dependency>
 
 		<dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.1</version>
-        </dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+		</dependency>
 
 		<dependency>
-            <groupId>args4j</groupId>
-            <artifactId>args4j</artifactId>
-            <version>2.0.18</version>
-        </dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>args4j</groupId>
+			<artifactId>args4j</artifactId>
+			<version>2.0.18</version>
+		</dependency>
 
 		<!-- Test dependencies -->
 
-        <dependency>
-            <groupId>cascading</groupId>
-            <artifactId>cascading-core</artifactId>
-            <version>${cascading.version}</version>
-            <classifier>tests</classifier>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.2</version>
-            <scope>test</scope>
-        </dependency>
+		<dependency>
+			<groupId>cascading</groupId>
+			<artifactId>cascading-core</artifactId>
+			<classifier>tests</classifier>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.7</version>
-            <scope>test</scope>
-        </dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>1.9.0</version>
-            <scope>test</scope>
-        </dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.7</version>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-test</artifactId>
-            <version>${hadoop.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-server</artifactId>
-            <version>${jetty.version}</version>
-            <scope>test</scope>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-servlet</artifactId>
-            <version>${jetty.version}</version>
-            <scope>test</scope>
-        </dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>1.9.0</version>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
-            <groupId>it.unimi</groupId>
-            <artifactId>dsiutils</artifactId>
-            <version>1.0.7</version>
-            <scope>test</scope>
-        </dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
-            <groupId>it.unimi</groupId>
-            <artifactId>fastutil5</artifactId>
-            <version>5.1.5</version>
-            <scope>test</scope>
-        </dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-server</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
-            <groupId>it.unimi</groupId>
-            <artifactId>webgraph</artifactId>
-            <version>2.4.2</version>
-            <scope>test</scope>
-        </dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-servlet</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
-            <groupId>org.archive</groupId>
-            <artifactId>heritrix</artifactId>
-            <version>1.14.3</version>
-            <scope>test</scope>
-        </dependency>
+			<groupId>it.unimi</groupId>
+			<artifactId>dsiutils</artifactId>
+			<version>1.0.7</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>it.unimi</groupId>
+			<artifactId>fastutil5</artifactId>
+			<version>5.1.5</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>it.unimi</groupId>
+			<artifactId>webgraph</artifactId>
+			<version>2.4.2</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.archive</groupId>
+			<artifactId>heritrix</artifactId>
+			<version>1.14.3</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- For testing the parsing of HTML with markup -->
-        <dependency>
-            <groupId>jaxen</groupId>
-            <artifactId>jaxen</artifactId>
-            <version>1.1.1</version>
-            <scope>test</scope>
-            <exclusions>
-				<exclusion>
-					<groupId>xerces</groupId>
-					<artifactId>xercesImpl</artifactId>
-				</exclusion>
-            </exclusions>
-        </dependency>
+		<dependency>
+			<groupId>jaxen</groupId>
+			<artifactId>jaxen</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- Provided dependencies -->
-	
+
 		<dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-core</artifactId>
-            <version>1.0.4</version>
-		    <scope>provided</scope>
-		    
-		    <exclusions>
-		    	<exclusion>
-		    		<groupId>org.mortbay.jetty</groupId>
-		    		<artifactId>jetty</artifactId>
-		    	</exclusion>
-		    	<exclusion>
-		    		<groupId>org.mortbay.jetty</groupId>
-		    		<artifactId>jetty-util</artifactId>
-		    	</exclusion>
-		    	<exclusion>
-		    		<groupId>org.mortbay.jetty</groupId>
-		    		<artifactId>servlet-api</artifactId>
-		    	</exclusion>
-				<exclusion>
-					<groupId>org.mortbay.jetty</groupId>
-					<artifactId>servlet-api-2.5</artifactId>
-				</exclusion>
-		    	<exclusion>
-		    		<groupId>org.apache.tomcat</groupId>
-		    		<artifactId>servlet-api</artifactId>
-		    	</exclusion>
-		    	
-		    	<exclusion>
-		    		<artifactId>ant</artifactId>
-		    		<groupId>ant</groupId>
-		    	</exclusion>
-		    </exclusions>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-core</artifactId>
+			<scope>provided</scope>
 		</dependency>
-        
+
 		<!-- Eclipse project generation dependencies -->
-	
+
 		<dependency>
-            <groupId>ant-eclipse</groupId>
-            <artifactId>ant-eclipse-jvm1.2</artifactId>
-            <version>1.0</version>
-            <scope>provided</scope>
-        </dependency>
-        
+			<groupId>ant-eclipse</groupId>
+			<artifactId>ant-eclipse-jvm1.2</artifactId>
+			<version>1.0</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 	
 	
