--- a/contrib/helpful/build.properties
+++ b/contrib/helpful/build.properties
@@ -13,7 +13,7 @@
 # limitations under the License.
  
 name=helpful
-version=1.0-SNAPSHOT
+version=0.9.1
 
 # For location of local cache of dependent jars
 # Default is ~/.m2/repository
