--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<!--
-	 Copyright 2009-2013 Scale Unlimited
+	 Copyright 2009-2015 Scale Unlimited
 
 	 Licensed under the Apache License, Version 2.0 (the "License");
 	 you may not use this file except in compliance with the License.
@@ -54,21 +54,14 @@
 	</repositories>
 
 	<properties>
-		<cascading.version>2.2.1</cascading.version>
-		<tika.version>1.5</tika.version>
-		<hadoop.version>1.0.4</hadoop.version>
+		<cascading.version>2.6.3</cascading.version>
+		<tika.version>1.7</tika.version>
+		<hadoop.version>2.4.1</hadoop.version>
 		<jetty.version>8.1.8.v20121106</jetty.version>
 	</properties>
 
-
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
-				<groupId>cascading</groupId>
-				<artifactId>cascading-core</artifactId>
-				<version>${cascading.version}</version>
-			</dependency>
-
 			<dependency>
 				<groupId>cascading</groupId>
 				<artifactId>cascading-hadoop</artifactId>
@@ -117,14 +110,6 @@
 				<version>4.2.5</version>
 			</dependency>
 
-			<!-- Test dependecies -->
-			<dependency>
-				<groupId>cascading</groupId>
-				<artifactId>cascading-core</artifactId>
-				<version>${cascading.version}</version>
-				<classifier>tests</classifier>
-			</dependency>
-
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-log4j12</artifactId>
@@ -132,9 +117,10 @@
 			</dependency>
 
 			<dependency>
-				<groupId>org.apache.hadoop</groupId>
-				<artifactId>hadoop-test</artifactId>
-				<version>${hadoop.version}</version>
+				<groupId>cascading</groupId>
+				<artifactId>cascading-core</artifactId>
+				<version>${cascading.version}</version>
+				<classifier>tests</classifier>
 			</dependency>
 
 			<dependency>
@@ -161,40 +147,10 @@
 				</exclusions>
 			</dependency>
 
-			<!-- Provided dependecies -->
-
 			<dependency>
 				<groupId>org.apache.hadoop</groupId>
-				<artifactId>hadoop-core</artifactId>
+				<artifactId>hadoop-client</artifactId>
 				<version>${hadoop.version}</version>
-
-				<exclusions>
-					<exclusion>
-						<groupId>org.mortbay.jetty</groupId>
-						<artifactId>jetty</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.mortbay.jetty</groupId>
-						<artifactId>jetty-util</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.mortbay.jetty</groupId>
-						<artifactId>servlet-api</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.mortbay.jetty</groupId>
-						<artifactId>servlet-api-2.5</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.apache.tomcat</groupId>
-						<artifactId>servlet-api</artifactId>
-					</exclusion>
-
-					<exclusion>
-						<artifactId>ant</artifactId>
-						<groupId>ant</groupId>
-					</exclusion>
-				</exclusions>
 			</dependency>
 
 		</dependencies>
@@ -204,11 +160,6 @@
 	<dependencies>
 
 		<!-- Compile time dependencies -->
-
-		<dependency>
-			<groupId>cascading</groupId>
-			<artifactId>cascading-core</artifactId>
-		</dependency>
 
 		<dependency>
 			<groupId>cascading</groupId>
@@ -223,7 +174,7 @@
 		<dependency>
 			<groupId>com.scaleunlimited</groupId>
 			<artifactId>cascading.utils</artifactId>
-			<version>2.1.5</version>
+			<version>2.5.4</version>
 		</dependency>
 
 		<dependency>
@@ -251,6 +202,13 @@
 			<artifactId>commons-io</artifactId>
 		</dependency>
 
+		<!-- For DOMParser -->
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>1.6.1</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>args4j</groupId>
 			<artifactId>args4j</artifactId>
@@ -283,12 +241,6 @@
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<version>1.9.0</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 
@@ -343,7 +295,7 @@
 
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-core</artifactId>
+			<artifactId>hadoop-client</artifactId>
 			<scope>provided</scope>
 		</dependency>
 
