Set up the version-0.9 branch for doing a release.
Switched to cascading.utils 2.6.0
Added assertPathExists to BixoPlatform.

--- a/examples/build.xml
+++ b/examples/build.xml
@@ -77,7 +77,8 @@
 		       optimize="${javac.optimize}"
 		       target="${javac.version}"
 		       source="${javac.version}"
-		       deprecation="${javac.deprecation}">
+		       deprecation="${javac.deprecation}"
+			   includeAntRuntime="false">
 			<compilerarg line="${javac.args} ${javac.args.warnings}" />
 			<classpath refid="compile.classpath" />
 		</javac>
