--- a/examples/build.properties
+++ b/examples/build.properties
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012 Scale Unlimited, Inc.
+ * Copyright (c) 2012-2015 Scale Unlimited, Inc.
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy 
  * of this software and associated documentation files (the "Software"), to deal
@@ -22,7 +22,7 @@
  */
  
 name=bixo-examples
-version=1.0-SNAPSHOT
+version=0.9-SNAPSHOT
 
 jar.name=${ant.project.name}-${version}.jar
 job.name=${ant.project.name}-job-${version}.jar
