--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	      
 	<!--
-	 Copyright 2009-2013 Scale Unlimited
+	 Copyright 2009-2015 Scale Unlimited
 
 	 Licensed under the Apache License, Version 2.0 (the "License");
 	 you may not use this file except in compliance with the License.
@@ -23,7 +23,7 @@
 	<artifactId>bixo-examples</artifactId>
 	<name>Bixo Examples</name>
 	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>0.9-SNAPSHOT</version>
 	<repositories>
 		<repository>
 			<id>Conjars</id>
@@ -32,7 +32,7 @@
 	</repositories>
 	
 	<properties>
-        <hadoop.version>1.0.4</hadoop.version>
+        <hadoop.version>2.4.1</hadoop.version>
         <jetty.version>8.1.8.v20121106</jetty.version>
 	</properties>
 	
@@ -40,7 +40,7 @@
 		<dependency>
 			<groupId>bixo</groupId>
 			<artifactId>bixo-core</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>0.9-SNAPSHOT</version>
 		</dependency>
 		
 		<!-- cascading-11-jdbc is based on Cascading 1.x and needs to be updated -->
@@ -92,44 +92,22 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.2</version>
+            <version>1.7.10</version>
         </dependency>
 
 		<!-- Provided dependencies -->
 
 		<dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-core</artifactId>
-            <version>1.0.4</version>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-client</artifactId>
+			<version>${hadoop.version}</version>
 		    <scope>provided</scope>
-		    
-		    <exclusions>
-		    	<exclusion>
-		    		<groupId>org.mortbay.jetty</groupId>
-		    		<artifactId>jetty</artifactId>
-		    	</exclusion>
-		    	<exclusion>
-		    		<groupId>org.mortbay.jetty</groupId>
-		    		<artifactId>jetty-util</artifactId>
-		    	</exclusion>
-		    	<exclusion>
-		    		<groupId>org.mortbay.jetty</groupId>
-		    		<artifactId>servlet-api</artifactId>
-		    	</exclusion>
+			<exclusions>
 				<exclusion>
-					<groupId>org.mortbay.jetty</groupId>
-					<artifactId>servlet-api-2.5</artifactId>
+					<groupId>javax.servlet</groupId>
+					<artifactId>servlet-api</artifactId>
 				</exclusion>
-		    	<exclusion>
-		    		<groupId>org.apache.tomcat</groupId>
-		    		<artifactId>servlet-api</artifactId>
-		    	</exclusion>
-		    	
-		    	<exclusion>
-		    		<artifactId>ant</artifactId>
-		    		<groupId>ant</groupId>
-		    	</exclusion>
-		    </exclusions>
+			</exclusions>
 		</dependency>
 
 		<dependency>
@@ -144,7 +122,7 @@
 		<dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.7</version>
+            <version>4.10</version>
             <scope>test</scope>
         </dependency>
 
@@ -152,13 +130,6 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>1.8.0</version>
-            <scope>test</scope>
-        </dependency>
-
-		<dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-test</artifactId>
-            <version>${hadoop.version}</version>
             <scope>test</scope>
         </dependency>
 
