--- a/tools/build.properties
+++ b/tools/build.properties
@@ -22,7 +22,7 @@
  */
  
 name=bixo-tools
-version=0.9-SNAPSHOT
+version=0.9.2
 
 jar.name=${ant.project.name}-${version}.jar
 job.name=${ant.project.name}-job-${version}.jar
