Fixed the versions for the contrib/helpful project

--- a/contrib/helpful/build.xml
+++ b/contrib/helpful/build.xml
@@ -1,4 +1,4 @@
-<project name="helpful" default="test">
+<project name="bixo-helpful" default="test">
 
 	<!--
 	 Copyright 2009-2015 Scale Unlimited
@@ -35,31 +35,31 @@
 	<!-- Maven                                                              -->
 	<!-- ================================================================== -->
 
-<target name="mvn-init" unless="compile.classpath" xmlns:artifact="urn:maven-artifact-ant">
-	<path id="maven.ant.tasks.classpath" path="${lib.dir}/maven-ant-tasks-2.0.10.jar" />
-	
-    <typedef resource="org/apache/maven/artifact/ant/antlib.xml" uri="urn:maven-artifact-ant"
-        classpathref="maven.ant.tasks.classpath"/>
-        
-    <condition property="maven.repo.local" value="${maven.repo.local}" else="${user.home}/.m2/repository">
-        <isset property="maven.repo.local"/>
-    </condition>
-    <echo>maven.repo.local=${maven.repo.local}</echo>
-    <artifact:localRepository id="local.repository" path="${maven.repo.local}"/>
-    <artifact:pom file="pom.xml" id="maven.project"/>
-    <artifact:dependencies pathId="compile.classpath" filesetId="compile.fileset" useScope="compile">
-        <pom refid="maven.project"/>
-        <localRepository refid="local.repository"/>
-    </artifact:dependencies>
-    <artifact:dependencies pathId="test.classpath" filesetId="test.fileset" useScope="test">
-        <pom refid="maven.project"/>
-        <localRepository refid="local.repository"/>
-    </artifact:dependencies>
-    <artifact:dependencies pathId="runtime.classpath" filesetId="runtime.fileset" useScope="runtime">
-        <pom refid="maven.project"/>
-        <localRepository refid="local.repository"/>
-    </artifact:dependencies>
-</target>
+	<target name="mvn-init" unless="compile.classpath" xmlns:artifact="urn:maven-artifact-ant">
+		<path id="maven.ant.tasks.classpath" path="${lib.dir}/maven-ant-tasks-2.0.10.jar" />
+		
+	    <typedef resource="org/apache/maven/artifact/ant/antlib.xml" uri="urn:maven-artifact-ant"
+	        classpathref="maven.ant.tasks.classpath"/>
+	        
+	    <condition property="maven.repo.local" value="${maven.repo.local}" else="${user.home}/.m2/repository">
+	        <isset property="maven.repo.local"/>
+	    </condition>
+	    <echo>maven.repo.local=${maven.repo.local}</echo>
+	    <artifact:localRepository id="local.repository" path="${maven.repo.local}"/>
+	    <artifact:pom file="pom.xml" id="maven.project"/>
+	    <artifact:dependencies pathId="compile.classpath" filesetId="compile.fileset" useScope="compile">
+	        <pom refid="maven.project"/>
+	        <localRepository refid="local.repository"/>
+	    </artifact:dependencies>
+	    <artifact:dependencies pathId="test.classpath" filesetId="test.fileset" useScope="test">
+	        <pom refid="maven.project"/>
+	        <localRepository refid="local.repository"/>
+	    </artifact:dependencies>
+	    <artifact:dependencies pathId="runtime.classpath" filesetId="runtime.fileset" useScope="runtime">
+	        <pom refid="maven.project"/>
+	        <localRepository refid="local.repository"/>
+	    </artifact:dependencies>
+	</target>
 
 	<!-- ================================================================== -->
 	<!-- Build sources                                                      -->
