--- a/contrib/helpful/build.properties
+++ b/contrib/helpful/build.properties
@@ -12,8 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
  
-name=helpful
-version=1.0-SNAPSHOT
+name=bixo-helpful
+version=0.9-SNAPSHOT
 
 # For location of local cache of dependent jars
 # Default is ~/.m2/repository
