--- a/contrib/helpful/pom.xml
+++ b/contrib/helpful/pom.xml
@@ -19,11 +19,11 @@
 	-->
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>helpful</groupId>
+    <groupId>bixo</groupId>
 	<artifactId>helpful</artifactId>
-	<name>helpful</name>
+	<name>bixo-helpful</name>
 	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>0.9-SNAPSHOT</version>
 	<repositories>
 		<repository>
 			<id>Conjars</id>
@@ -32,55 +32,33 @@
 	</repositories>
 	
 	<properties>
-        <hadoop.version>1.0.4</hadoop.version>
+        <hadoop.version>2.4.1</hadoop.version>
 	</properties>
 	
 	<dependencies>
 		<dependency>
 			<groupId>bixo</groupId>
 			<artifactId>bixo-core</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>0.9-SNAPSHOT</version>
 		</dependency>
 		
 		<dependency>
             <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-core</artifactId>
-            <version>1.0.4</version>
+            <artifactId>hadoop-client</artifactId>
+            <version>${hadoop.version}</version>
 		    <scope>provided</scope>
-		    
-		    <exclusions>
-		    	<exclusion>
-		    		<groupId>org.mortbay.jetty</groupId>
-		    		<artifactId>jetty</artifactId>
-		    	</exclusion>
-		    	<exclusion>
-		    		<groupId>org.mortbay.jetty</groupId>
-		    		<artifactId>jetty-util</artifactId>
-		    	</exclusion>
-		    	<exclusion>
-		    		<groupId>org.mortbay.jetty</groupId>
-		    		<artifactId>servlet-api</artifactId>
-		    	</exclusion>
+			<exclusions>
 				<exclusion>
-					<groupId>org.mortbay.jetty</groupId>
-					<artifactId>servlet-api-2.5</artifactId>
+					<groupId>javax.servlet</groupId>
+					<artifactId>servlet-api</artifactId>
 				</exclusion>
-		    	<exclusion>
-		    		<groupId>org.apache.tomcat</groupId>
-		    		<artifactId>servlet-api</artifactId>
-		    	</exclusion>
-		    	
-		    	<exclusion>
-		    		<artifactId>ant</artifactId>
-		    		<groupId>ant</groupId>
-		    	</exclusion>
-		    </exclusions>
+			</exclusions>
 		</dependency>
 	
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.2</version>
+            <version>1.7.10</version>
 		</dependency>
 	
 		<!-- Test dependencies -->
@@ -88,21 +66,14 @@
 		<dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.7</version>
+            <version>4.10</version>
             <scope>test</scope>
         </dependency>
 
 		<dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>1.8.0</version>
-            <scope>test</scope>
-        </dependency>
-
-		<dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-test</artifactId>
-            <version>${hadoop.version}</version>
+            <version>1.9.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -112,7 +83,7 @@
             <groupId>ant-eclipse</groupId>
             <artifactId>ant-eclipse-jvm1.2</artifactId>
             <version>1.0</version>
-            <scope>eclipse</scope>
+            <scope>provided</scope>
         </dependency>
         
 	</dependencies>
