Setting up release of distribution for 0.9.2
When the 0.9.2 tag was created, the contrib components hadn’t been
updated.

--- a/contrib/helpful/pom.xml
+++ b/contrib/helpful/pom.xml
@@ -23,7 +23,7 @@
 	<artifactId>helpful</artifactId>
 	<name>bixo-helpful</name>
 	<packaging>jar</packaging>
-	<version>0.9-SNAPSHOT</version>
+	<version>0.9.2</version>
 	<repositories>
 		<repository>
 			<id>Conjars</id>
@@ -33,13 +33,14 @@
 	
 	<properties>
         <hadoop.version>2.4.1</hadoop.version>
+        <bixo.version>0.9.2</bixo.version>
 	</properties>
 	
 	<dependencies>
 		<dependency>
 			<groupId>bixo</groupId>
 			<artifactId>bixo-core</artifactId>
-			<version>0.9-SNAPSHOT</version>
+			<version>${bixo.version}</version>
 		</dependency>
 		
 		<dependency>
