--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -23,7 +23,7 @@
 	<artifactId>bixo-examples</artifactId>
 	<name>Bixo Examples</name>
 	<packaging>jar</packaging>
-	<version>0.9-SNAPSHOT</version>
+	<version>0.9.2</version>
 	<repositories>
 		<repository>
 			<id>Conjars</id>
@@ -34,13 +34,14 @@
 	<properties>
         <hadoop.version>2.4.1</hadoop.version>
         <jetty.version>8.1.8.v20121106</jetty.version>
+        <bixo.version>0.9.2</bixo.version>
 	</properties>
 	
 	<dependencies>
 		<dependency>
 			<groupId>bixo</groupId>
 			<artifactId>bixo-core</artifactId>
-			<version>0.9-SNAPSHOT</version>
+			<version>${bixo.version}</version>
 		</dependency>
 		
 		<!-- cascading-11-jdbc is based on Cascading 1.x and needs to be updated -->
