--- a/contrib/helpful/build.properties
+++ b/contrib/helpful/build.properties
@@ -13,7 +13,7 @@
 # limitations under the License.
  
 name=bixo-helpful
-version=0.9.2
+version=0.9-SNAPSHOT
 
 # For location of local cache of dependent jars
 # Default is ~/.m2/repository
