--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -23,7 +23,7 @@
 	<artifactId>bixo-examples</artifactId>
 	<name>Bixo Examples</name>
 	<packaging>jar</packaging>
-	<version>0.9.2</version>
+	<version>1.0-SNAPSHOT</version>
 	<repositories>
 		<repository>
 			<id>Conjars</id>
@@ -34,7 +34,7 @@
 	<properties>
         <hadoop.version>2.4.1</hadoop.version>
         <jetty.version>8.1.8.v20121106</jetty.version>
-        <bixo.version>0.9.2</bixo.version>
+        <bixo.version>1.0-SNAPSHOT</bixo.version>
 	</properties>
 	
 	<dependencies>
