--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -23,7 +23,7 @@
 	<artifactId>bixo-tools</artifactId>
 	<name>Bixo Tools</name>
 	<packaging>jar</packaging>
-	<version>0.9.2</version>
+	<version>1.0-SNAPSHOT</version>
 	<repositories>
 		<repository>
 			<id>Conjars</id>
@@ -33,7 +33,7 @@
 	
 	<properties>
         <hadoop.version>2.4.1</hadoop.version>
-        <bixo.version>0.9.2</bixo.version>
+        <bixo.version>1.0-SNAPSHOT</bixo.version>
 	</properties>
 	
 	<dependencies>
