Switched to crawler-commons for processing robots.txt. The robots handling code in crawler-commons was based on the the Bixo code but has subsequently been improved.

--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,12 @@
 		</dependency>
 
 		<dependency>
+		    <groupId>com.google.code.crawler-commons</groupId>
+		    <artifactId>crawler-commons</artifactId>
+		    <version>0.5</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 		</dependency>
